<resources>
    <string name="app_name">HW8</string>
    <string name="addItem">增加条目</string>
    <string name="name">姓名</string>
    <string name="birthday">生日</string>
    <string name="gift">礼物</string>
    <string name="nameLog">姓名：</string>
    <string name="birthdayLog">生日：</string>
    <string name="giftLog">礼物：</string>
    <string name="phone">电话：</string>
    <string name="add">增加</string>
</resources>
